Обновлен градиент шапки и кнопки Забронировать на единый стиль

--- a/client-booking-miniapp.html
+++ b/client-booking-miniapp.html
@@ -138,7 +138,7 @@
     }
     
     .btn-primary {
-      background: linear-gradient(135deg, var(--neon-purple) 0%, var(--neon-pink) 100%);
+      background: linear-gradient(18deg, #500a91 0%, #bc2972 100%);
       border: none;
       border-radius: 1rem;
       padding: 1rem 2rem;
@@ -201,7 +201,7 @@
     }
     
     .header {
-      background: linear-gradient(18deg, #320859 0%, #bc2972 100%);
+      background: linear-gradient(18deg, #500a91 0%, #bc2972 100%);
       padding: 1.5rem;
       text-align: center;
       z-index: 100;
