Добавлен логотип VR Lounge в шапку Friendly-service Mini App

--- a/client-booking-miniapp.html
+++ b/client-booking-miniapp.html
@@ -281,7 +281,7 @@
   <div class="min-h-screen pb-24">
     <!-- Заголовок -->
     <div class="header">
-      <img src="https://vr-lounge.github.io/-/logo.png" alt="VR Lounge Logo" class="header-logo" onerror="this.style.display='none'">
+      <img src="logo.png" alt="VR Lounge Logo" class="header-logo" onerror="this.style.display='none'">
       <div class="header-content">
         <h1 class="text-2xl font-bold neon-text">🎮 Записаться в VR Lounge</h1>
         <p class="text-sm mt-1 opacity-90">Выберите услугу и удобное время</p>
