Увеличен размер логотипа на мобильных устройствах и убран эмодзи из заголовка

--- a/client-booking-miniapp.html
+++ b/client-booking-miniapp.html
@@ -238,8 +238,8 @@
       }
       
       .header-logo {
-        width: 50px;
-        height: 50px;
+        width: 65px;
+        height: 65px;
       }
       
       .header-content h1 {
@@ -290,7 +290,7 @@
     <div class="header">
       <img src="https://vr-lounge.github.io/-/Logo.png" alt="VR Lounge Logo" class="header-logo" onerror="this.style.display='none'">
       <div class="header-content">
-        <h1 class="text-2xl font-bold neon-text">🎮 Записаться в VR Lounge</h1>
+        <h1 class="text-2xl font-bold neon-text">Записаться в VR Lounge</h1>
         <p class="text-sm mt-1 opacity-90">Выберите услугу и удобное время</p>
       </div>
     </div>
