Исправлено: PS5 услуги теперь доступны всегда (будни и выходные)

--- a/client-booking-miniapp.html
+++ b/client-booking-miniapp.html
@@ -928,8 +928,8 @@
       const availableServiceIds = new Set();
       
       const allServices = [
-        { id: 'weekday_ps1', label: 'PS5 (1 джойстик)', price: 150, icon: 'fa-gamepad', weekday: true },
-        { id: 'weekday_ps2', label: 'PS5 (2 джойстика)', price: 300, icon: 'fa-gamepad', weekday: true },
+        { id: 'weekday_ps1', label: 'PS5 (1 джойстик)', price: 150, icon: 'fa-gamepad', weekday: null },
+        { id: 'weekday_ps2', label: 'PS5 (2 джойстика)', price: 300, icon: 'fa-gamepad', weekday: null },
         { id: 'weekday_vr1', label: 'VR очки (1 шт.)', price: 500, icon: 'fa-vr-cardboard', weekday: true },
         { id: 'weekday_vr2', label: 'VR очки (2 шт.)', price: 1000, icon: 'fa-vr-cardboard', weekday: true },
         { id: 'weekday_vr3', label: 'VR очки (3 шт.)', price: 1500, icon: 'fa-vr-cardboard', weekday: true },
