--- a/telegram-miniapp.html
+++ b/telegram-miniapp.html
@@ -51,6 +51,12 @@
       color: #6b7280;
     }
     
+    /* Стили для шапки */
+    .header-blue {
+      border-bottom-left-radius: 1.5rem;
+      border-bottom-right-radius: 1.5rem;
+    }
+    
     /* Видимый курсор в полях ввода */
     input[type="text"],
     input[type="tel"],
@@ -114,7 +120,7 @@
 <body>
   <div class="min-h-screen bg-gray-50 pb-20">
     <!-- Заголовок -->
-    <div class="bg-blue-600 text-white p-4 sticky top-0 z-10 shadow-md">
+    <div class="bg-blue-600 text-white p-4 z-10 shadow-md header-blue">
       <h1 class="text-xl font-bold text-center">📝 Новая запись клиента</h1>
     </div>
 
