Исправлена высота элемента max-w-7xl: изменено с 55px на 54px

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
   <header class="bg-white/50 shadow-md sticky top-0 z-30 backdrop-blur-md" id="mainHeader">
     <!-- Верхний блок шапки (скрывается при скролле) -->
     <div class="top-header-block transition-all duration-300" id="headerTop" style="will-change: height;">
-      <div class="max-w-7xl mx-auto px-4 md:px-6 py-3">
+      <div class="max-w-7xl mx-auto px-4 md:px-6 py-3" style="height: 54px;">
         <div class="flex flex-row items-center justify-between">
           <h1 class="text-xl md:text-2xl font-semibold tracking-tight text-gray-900 select-none">VR Lounge - Управление</h1>
           <div class="flex items-center space-x-4">
