Выровнены вертикальные отступы навигационной панели: добавлен py-2 к контейнеру

--- a/index.html
+++ b/index.html
@@ -788,8 +788,8 @@
     
           <!-- Нижний блок с навигацией (всегда виден) -->
       <div class="bottom-header-block bg-white/80 border-t border-gray-100" style="min-height: 53px;">
-        <div class="max-w-7xl mx-auto px-4 md:px-6">
-          <nav class="nav-links flex items-center space-x-2 md:space-x-6 py-2 overflow-x-auto whitespace-nowrap" style="scrollbar-width: none; -ms-overflow-style: none; min-height: 37px;">
+        <div class="max-w-7xl mx-auto px-4 md:px-6 py-2">
+          <nav class="nav-links flex items-center space-x-2 md:space-x-6 overflow-x-auto whitespace-nowrap" style="scrollbar-width: none; -ms-overflow-style: none; min-height: 37px;">
             <a href="#" class="nav-link active whitespace-nowrap" onclick="return showBookingsSection()">
               <i class="fas fa-calendar-alt mr-2"></i>Записи
             </a>
